--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "echarts": "^4.7.0",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
+    "moment": "^2.24.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6"
   },
