--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-plugin-import": "^1.13.0",
     "core-js": "^3.6.4",
     "echarts": "^4.7.0",
+    "js-base64": "^3.4.5",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
     "moment": "^2.24.0",
