--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
     "moment": "^2.24.0",
+    "numeral": "^2.0.6",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6"
   },
